# Fine-Tuning-and-Evaluation-of-SQL-Generation-Model

./: README.md  finetuner.out  nohup.out  pyproject.toml  requirements.txt
checkpoints/checkpoint-3050/: README.md  adapter_config.json  rng_state.pth  scheduler.pt  tokenizer_config.json  trainer_state.json
data/: train_df.csv
evals/: phx.py
finetuning/: finetuning_tools.py
finetuning/huggingFace_trainer/: finetuner_final.py  lora_finetuning_trainer.ipynb
finetuning/pytorch/: lora_finetuning_pytorch.ipynb
logs/: events.out.tfevents.1751386337.mann.kurani.ctr-mac.30252.0  events.out.tfevents.1751388701.mann.kurani.ctr-mac.34372.0  events.out.tfevents.1751388816.mann.kurani.ctr-mac.35635.0  events.out.tfevents.1751389790.mann.kurani.ctr-mac.37478.0  events.out.tfevents.1751391161.mann.kurani.ctr-mac.40127.0  events.out.tfevents.1751392042.mann.kurani.ctr-mac.42121.0  events.out.tfevents.1751392261.mann.kurani.ctr-mac.42877.0  events.out.tfevents.1751394233.mann.kurani.ctr-mac.46779.0  events.out.tfevents.1751394315.mann.kurani.ctr-mac.47244.0  events.out.tfevents.1751395149.mann.kurani.ctr-mac.48995.0  events.out.tfevents.1751395457.mann.kurani.ctr-mac.49946.0  events.out.tfevents.1751397684.mann.kurani.ctr-mac.53620.0
